修复 1.0.x 全量编译（JDK8 reactor 展开发现的多处破损）
## 修复的破损（4e6b14ef Javadoc 同步遗漏）
- data-logs：包位置破损（aspect→logs，对齐 2.0.x）
  - ApiOperationLogProvider/DefaultApiOperationLogProvider 移到 io.ddd4j.data.logs
  - ApiOperationLogAspect 的 import 修正
- monitor：DingTalkClient/FeishuClient/WeComClient Javadoc 注入破坏
  - 从 4e6b14ef~1 恢复（4 个文件）

## 修复样本代码
- sample-order-domain/Money.java：删除非法 import java.util.Locale.ROOT
- sample-order-application/CreateOrderCommand.java：拆分单行写法，补 Objects import
- sample-order-application/OrderApplicationService.java：List.copyOf→ArrayList（JDK10+ → JDK8）
- sample-javalin/JavalinSample.java：从 2.0.x 拉取后用 2.0.x 完整替换

## 注释从 2.0.x 同步但未做 JDK8 降级的样本模块
（与 quarkus/micronaut 一致的处理方式）
- ddd4j-sample-javalin / ddd4j-sample-javalin-cqrs / ddd4j-sample-javalin-satoken
- ddd4j-sample-javalin-shiro
- ddd4j-sample-vertx / ddd4j-sample-vertx-cqrs
- ddd4j-sample-helidon / ddd4j-sample-helidon-cqrs
- ddd4j-sample-dropwizard / ddd4j-sample-dropwizard-cqrs

## 验证
- 全量 reactor 编译（mvn compile，不用 -pl 子模块）通过 ✅
- 之前用 -pl ddd4j-runtime/ddd4j-runtime-guice -am 这种方式漏检了跨子模块引用

## 教训
- 1.0.x 必须用 mvn compile（无 -pl）做完整 reactor 编译，否则会漏检
  跨子模块引用（如 data-logs 引用被 guice 引用）