@@ -1,6 +1,5 @@
 package io.ddd4j.sample.javalin.order.infrastructure;
 
-import java.util.stream.Collectors;
 import io.ddd4j.sample.order.application.IdempotencyPort;
 import io.ddd4j.sample.order.application.OrderReadModel;
 import io.ddd4j.sample.order.application.OrderReadModelPort;
@@ -54,7 +53,7 @@ public final class JavalinOrderAdapters
 
     @Override
     public List<Order> findAll(int offset, int limit) {
-        return orders.values().stream().skip(offset).limit(limit).collect(java.util.stream.Collectors.toList());
+        return orders.values().stream().skip(offset).limit(limit).toList();
     }
 
     @Override
@@ -69,7 +68,7 @@ public final class JavalinOrderAdapters
 
     @Override
     public List<OutboxMessage> pending(int limit) {
-        return new ArrayList<>(outbox.values()).stream().limit(limit).collect(java.util.stream.Collectors.toList());
+        return new ArrayList<>(outbox.values()).stream().limit(limit).toList();
     }
 
     @Override
@@ -102,7 +101,7 @@ public final class JavalinOrderAdapters
                         || Objects.equals(criteria.status(), order.status()))
                 .skip((long) (criteria.page() - 1) * criteria.size())
                 .limit(criteria.size())
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
     }
 
     @Override
